<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.jadwalshalat_uasakb.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_qibla"
        android:name="com.example.jadwalshalat_uasakb.ui.qibla.QiblaFragment"
        android:label="@string/title_qibla"
        tools:layout="@layout/fragment_qibla" />

    <fragment
        android:id="@+id/navigation_monthly"
        android:name="com.example.jadwalshalat_uasakb.ui.monthly.MonthlyFragment"
        android:label="@string/title_monthly"
        tools:layout="@layout/fragment_monthly" />


</navigation>